Uploade Web file

--- a/Batchlogin.html
+++ b/Batchlogin.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#">ติดต่อเรา</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-success text-white ms-3" href="login.html">เข้าสู่ระบบ</a>
+                    <a class="nav-link btn btn-success text-white ms-3" href="login.html">ออกจากระบบ</a>
                 </li>
             </ul>
             <!-- Dark Mode Toggle -->
@@ -75,7 +75,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt=" ">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 1</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember1.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt=" ">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 2</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember2.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt=" ">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 3</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember3.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 4">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 4</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember4.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 5">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 5</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember5.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 6">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 6</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember6.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 7">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 7</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember7.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +146,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 8">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 8</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember8.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 9">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 9</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember9.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 10">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 10</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember10.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 11">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 11</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember11.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 12">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 12</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember12.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 13">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 13</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember13.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 14">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 14</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember14.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 15">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 15</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember15.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -228,7 +228,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 16">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 16</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember16.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 17">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 17</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember17.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 18">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 18</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember18.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 19">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 19</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember19.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 20">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 20</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember20.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 21">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 21</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember21.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -290,7 +290,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 22">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 22</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember22.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -299,7 +299,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 23">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 23</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember23.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -308,7 +308,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 24">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 24</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="/classmember24.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -323,7 +323,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 25">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 25</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember25.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -332,7 +332,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 26">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 26</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember26.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -341,7 +341,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 27">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 27</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember27.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 28">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 28</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember28.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -361,7 +361,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 29">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 29</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember29.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
@@ -370,7 +370,7 @@
                                 <img src="https://placedog.net/500" class="card-img-top" alt="รุ่นที่ 30">
                                 <div class="card-body">
                                     <h2 class="batch-title">รุ่นที่ 30</h2>
-                                    <a href="login.html" class="btn btn-primary">ดูสมาชิก</a>
+                                    <a href="classmember30.html" class="btn btn-primary">ดูสมาชิก</a>
                                 </div>
                             </div>
                         </div>
