--- a/profile1.html
+++ b/profile1.html
@@ -73,7 +73,34 @@
     </div>
 
     <!-- Footer -->
-   
+     <!-- Footer -->
+     <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-4 footer-info">
+                    <h5>ข้อมูล</h5>
+                    <p>เว็บไซต์นี้ออกแบบและพัฒนาโดย </p>
+                    <p>อภิไช โฉมทอง</p>
+                    
+                </div>
+                <div class="col-md-4 footer-info">
+                    <h5>ติดต่อเรา</h5>
+                    <p>รหัสนักศึกษา: 6604101397</p>
+                    <p>อีเมล: mju6604101397@mju.ac.th</p>
+                </div>
+                <div class="col-md-4 footer-info">
+                    <h5>สาขาวิชาวิทยาการคอมพิวเตอร์
+                    </h5>
+                    ชั้น 6, อาคาร 60 ปี คณะวิทยาศาสตร์ มหาวิทยาลัยแม่โจ้
+                    63 หมู่ 4 ต.หนองหาร อ.สันทราย จ.เชียงใหม่ 50290
+                    โทร. 053-873890-3
+                    Fax. 053-873898
+                    E-mail : cs@mju.ac.th
+                </div>
+            </div>
+            <p class="mt-3">&copy; 2024 อภิไช โฉมทอง. copyright.</p>
+        </div>
+    </footer>
     <!-- Bootstrap 5.3 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
