--- a/profile1.html
+++ b/profile1.html
@@ -63,9 +63,10 @@
                 <p><strong>รหัสนักศึกษา:</strong> 6101101111</p>
                 <p><strong>สาขาวิชา:</strong> วิทยาการคอมพิวเตอร์</p>
                 <p><strong>ชั้นปี:</strong> 4</p>
+                <p><strong>สถานะ:</strong> <span style="color:red;">เรียนจบ</span></p>
                 <p><strong>อีเมล:</strong> mju6101101111@mju.ac.th</p>
                 <p><strong>เบอร์โทร:</strong> 081-2345678</p>
-                <p><strong>เกี่ยวกับ:</strong> นายสมชายเป็นนักศึกษาที่มีความสามารถทางด้านวิทยาการคอมพิวเตอร์ มีความสนใจในด้านการพัฒนาโปรแกรม และการออกแบบระบบต่าง ๆ</p>
+                <p><strong>เกี่ยวกับ:</strong> กระผมเป็นนักศึกษาที่มีความสามารถทางด้านวิทยาการคอมพิวเตอร์ มีความสนใจในด้านการพัฒนาโปรแกรม และการออกแบบระบบต่าง ๆ อนาคตอยากเป็น Fullstack Developer</p>
                 <p><strong>คติประจำใจ:</strong> อยากเขียนโค้ดให้เหมือนกับความรักของเรา ไม่มีวัน error.
                 </p>
             </div>
@@ -106,4 +107,4 @@
     <!-- Custom JavaScript -->
     <script src="batchjava.js"></script>
 </body>
-</html>
+</html>˜
